Bug 183309 Mozilla crashes on startup. - Trunk [@ nsBindingManager::GetXBLDocumentInfo] patch by nallen@acm.org r=brendan sr=alecf a=asa